# ros2_ws

./: .clang-format  .gitmodules  setup_spi.sh
.github-temp/workflows/: ros2-foxy.yaml  ros2.yaml
.github/workflows/: ros2-foxy.yaml  ros2.yaml
scripts/: create_cpp.sh  create_py.sh  doctor.sh  setup.sh
src/action_tutorials_cpp/: CMakeLists.txt  package.xml
src/action_tutorials_cpp/src/: fibonacci_action_server.cpp
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/action_tutorials_py/: package.xml  setup.py
src/action_tutorials_py/action_tutorials_py/: fibonacci_action_server.py
src/example/example_action_cpp/: CMakeLists.txt  package.xml
src/example/example_action_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
src/example/example_action_interfaces/: CMakeLists.txt  package.xml
src/example/example_action_py/: package.xml  setup.py
src/example/example_launch_cpp/: CMakeLists.txt  package.xml
src/example/example_launch_py/: package.xml  setup.py
src/example/example_launch_py/launch/: broadcaster_listener.launch.py  example_event_handlers.launch.py  example_main.launch.py  example_substitutions.launch.py  fixed_broadcaster.launch.py  launch_turtlesim.launch.py  mimic.launch.py  turtlesim_rviz.launch.py  turtlesim_world_1.launch.py  turtlesim_world_2.launch.py  turtlesim_world_3.launch.py
src/example/example_parameter_event_handler_cpp/: package.xml
src/example/example_parameters_cpp/: CMakeLists.txt  package.xml
src/example/example_parameters_py/: setup.cfg  setup.py
src/example/example_parameters_py/example_parameters_py/: python_parameters_node.py
src/example/example_py/: setup.py
src/example/example_py/example_py/: node_02.py
src/example/example_srvcli_py/: setup.cfg
src/example/example_topic_rclcpp/: CMakeLists.txt  package.xml
src/example/example_topic_rclcpp/src/: topic_publisher_02.cpp
src/example/more_interfaces/: CMakeLists.txt  package.xml
src/example/tutorial_interfaces/: package.xml
src/example_cpp/: CMakeLists.txt  package.xml
src/example_cpp/src/: node_01.cpp
src/example_launch_py/: setup.cfg  setup.py
src/example_parameter_event_handler_cpp/: CMakeLists.txt  package.xml
src/example_parameter_event_handler_cpp/src/: parameter_event_handler.cpp
src/example_parameters_cpp/: CMakeLists.txt  package.xml
src/example_parameters_cpp/src/: cpp_parameters_node.cpp
src/example_parameters_py/: package.xml
src/example_py/: package.xml  setup.cfg  setup.py
src/example_robot/: CMakeLists.txt  package.xml
src/example_srvcli_cpp/: CMakeLists.txt  package.xml
src/example_srvcli_cpp/src/: add_two_ints_server.cpp
src/example_srvcli_py/: package.xml  setup.py
src/example_tf2_py/: package.xml  setup.cfg  setup.py
src/example_tf2_py/example_tf2_py/: static_turtle_tf2_broadcaster.py
src/example_topic_rclcpp/: CMakeLists.txt  package.xml
src/example_topic_rclcpp/src/: topic_publisher_01.cpp  topic_subscribe_01.cpp  topic_subscribe_02.cpp
src/example_topic_rclpy/: package.xml  setup.cfg  setup.py
src/example_topic_rclpy/example_topic_rclpy/: topic_publisher_02.py
src/humanoid_motor_control_cpp/: CMakeLists.txt  package.xml  readme.md
src/humanoid_motor_control_cpp/doc/: getting_start.md  sdk_api.md
src/humanoid_motor_control_cpp/doc/imu/: ImuAssistant_Setup_Win32_V3-9-8_SHA1SUM.txt
src/humanoid_motor_control_cpp/doc/imu/TransducerM_Example_CPP_QT_V129-R1/: HelloMotionModule.cpp  HelloMotionModule.h  HelloMotionModule.pro  HelloMotionModule.ui  main.cpp
src/humanoid_motor_control_cpp/doc/imu/TransducerM_Example_CPP_QT_V129-R1/EasyProfile/: BasicTypes.h  EasyObjectDictionary.cpp  EasyObjectDictionary.h  EasyProfile.cpp  EasyProfile.h  EasyProtocol.cpp  EasyProtocol.h  EasyQueue.h  LibraryVersion.txt  License.txt
src/humanoid_motor_control_cpp/include/driver/: driver.h  spi_driver.h
src/humanoid_motor_control_cpp/include/humanoid_control/: arm_control.h  leg_control.h
src/humanoid_motor_control_cpp/include/humanoid_motor_control_cpp/: ankle_ik.h  config.h  motor_control.h  motor_data.h  motor_driver.h
src/humanoid_motor_control_cpp/include/low_level_control/: imu_state.h  motor_control.h  motor_data.h
src/humanoid_motor_control_cpp/include/modern_robotics/: dynamics.h  kinematics.h  modern_robotics.h  trajectory.h
src/humanoid_motor_control_cpp/include/motor_control/: imu_state.h  motor_control.h  motor_data.h  motor_driver.h  spi_utils.h
src/humanoid_motor_control_cpp/include/spi/: spi_driver.h
src/humanoid_motor_control_cpp/launch/: humanoid_motor_launch.py
src/humanoid_motor_control_cpp/src/: ankle_ik.cpp  example.cpp  example_state.cpp  motor_control.cpp  motor_driver.cpp  spi_utils.cpp
src/humanoid_motor_control_cpp/src/driver/: spi_driver.cpp
src/humanoid_motor_control_cpp/src/humanoid_control/: arm_control.cpp  leg_control.cpp
src/humanoid_motor_control_cpp/src/humanoid_control/kinematic/: ankle_ik.cpp
src/humanoid_motor_control_cpp/src/kinematic/: ankle_ik.cpp
src/humanoid_motor_control_cpp/src/low_level_control/: imu_state.cpp  motor_control.cpp
src/humanoid_motor_control_cpp/src/modern_robotics/: dynamics.cpp  kinematics.cpp  modern_robotics.cpp  trajectory.cpp
src/humanoid_motor_control_cpp/src/motor_control/: motor_control.cpp  motor_driver.cpp  spi_utils.cpp
src/humanoid_motor_control_cpp/src/spi/: spi_driver.cpp  spi_utils.cpp
src/more_interfaces/msg/: Contacts.msg
src/mujoco_example/: package.xml  setup.cfg  setup.py
src/mujoco_example/mujoco_example/: hector_sim.py  mujoco_base.py  mujoco_test_01.py
src/pi_robot/pi_biped/mjcf/: pai.xml
src/plugin_example/polygon_plugins/: CMakeLists.txt  package.xml
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_plugins/src/: polygon_plugins.cpp
src/realsense_cpp/: CMakeLists.txt  package.xml
src/realsense_cpp/include/local_map/: local_map.h
src/realsense_cpp/include/realsense_cpp/: local_map.h  realsense_driver.h
src/realsense_cpp/src/: local_map.cpp  pose_example.cpp  realsense_driver.cpp
src/realsense_cpp/src/local_map/: local_map.cpp
(+16 files in other folders)
