cmake_minimum_required(VERSION 3.5)
project(humanoid_motor_control_cpp)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)

include_directories(include)

add_executable(humanoid_motor_example
  src/example.cpp
  src/kinematic/ankle_ik.cpp
  src/motor_control.cpp
  src/motor_driver.cpp
  src/spi_utils.cpp
)
ament_target_dependencies(humanoid_motor_example rclcpp)

install(TARGETS 
  humanoid_motor_example
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
